--- a/BlackJack-SQL/app/src/main/res/layout/activity_main.xml
+++ b/BlackJack-SQL/app/src/main/res/layout/activity_main.xml
@@ -282,7 +282,7 @@
         android:layout_marginRight="15dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/buttons"
-        android:onClick="onClickDoubleDown"
+        android:onClick="OnClickDoubleDown"
         android:text="Double Down"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="@+id/buttonHit"
@@ -299,7 +299,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/buttons"
-        android:onClick="onClickNewGame"
+        android:onClick="OnClickNewGame"
         android:text="New Game"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@+id/guideline11"
@@ -314,7 +314,7 @@
         android:layout_marginLeft="23dp"
         android:layout_marginTop="-20dp"
         android:background="@drawable/buttons"
-        android:onClick="onClickSplit"
+        android:onClick="OnClickSplit"
         android:text="Split"
         app:layout_constraintLeft_toLeftOf="@+id/guideline11"
         app:layout_constraintTop_toTopOf="@+id/guideline13"
@@ -328,7 +328,7 @@
         android:layout_height="48dp"
         android:layout_marginRight="8dp"
         android:background="@drawable/buttons"
-        android:onClick="onClickHit"
+        android:onClick="OnClickHit"
         android:text="Hit"
         app:layout_constraintRight_toLeftOf="@+id/buttonsplit"
         tools:text="Hit"
@@ -342,7 +342,7 @@
         android:layout_marginLeft="91dp"
         android:layout_marginRight="8dp"
         android:background="@drawable/buttons"
-        android:onClick="onClickStay"
+        android:onClick="OnClickStay"
         android:text="Stay"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/buttonHit"
@@ -517,7 +517,7 @@
         android:layout_height="20dp"
         android:layout_marginLeft="8dp"
         android:background="@drawable/mathbutton"
-        android:onClick="onClickMinus"
+        android:onClick="OnClickMinus"
         android:text="-"
         android:textAlignment="center"
         android:textSize="14sp"
@@ -536,7 +536,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="23dp"
         android:background="@drawable/mathbutton"
-        android:onClick="onClickPlus"
+        android:onClick="OnClickPlus"
         android:text="+"
         android:textAlignment="center"
         android:textSize="14sp"
