--- a/BlackJack-SQL/app/src/main/res/layout/activity_login.xml
+++ b/BlackJack-SQL/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/buttons"
-        android:onClick="onClickCreate"
+        android:onClick="OnClickCreate"
         android:text="Create User"
         app:layout_constraintLeft_toLeftOf="@+id/editTextUser"
         app:layout_constraintTop_toBottomOf="@+id/editTextUser" />
